# projeto_sptrans

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  analise_completa.py  analise_onibus.py  analise_v2.py  dashboard_sptrans.py  docker-compose.yml  monitor.py  painel_interativo_sp.py  post_linkedin.txt  pyproject.toml  relatorio_etapas_e_erros.txt  requirements-dev.txt  requirements.txt  requirements_dashboard.txt  run_all.sh  stop_all.sh  workspace.yaml
.ipynb_checkpoints/: coleta_sptrans-checkpoint.py
arquivos_extras/: estrutura_projeto.md  gerar_paineis.sh  gerar_painel.sh  gerar_painel_interativo.sh  guia_api_olho_vivo_sptrans.py
assets/: __init__.py  checks.py  coleta.py  processamento.py
config/: config.ini  config.ini.template
data/: analise_onibus.csv  consulta_sql_csv_sptrans.py  todas_as_linhas.csv
notebooks/: analise_exploratoria.ipynb  sptrans_coleta_analise.ipynb
scripts/: github_automation.py
src/: analise_onibus.py  coleta_previsoes.py  coleta_sptrans.py  compactar_parquet.py  comparacao_moovit_1036_10.py  contracts.py  dashboard_sptrans.py  database.py  expurgar_sqlite.py  inicializar_banco.py  migrar_dedup.py  migrar_postgres.py  monitor.py
tests/: conftest.py  test_analise_onibus.py  test_assets.py  test_checks.py  test_coleta_previsoes.py  test_coleta_sptrans.py  test_compactar_parquet.py  test_contracts.py  test_dashboard.py  test_expurgar_sqlite.py  test_inicializar_banco.py  test_linhagem.py  test_main.py  test_migrar_dedup.py  test_postgres.py
(+1021 files in other folders)
