
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto_sptrans"
version = "0.1.0"
authors = [
  { name="Seu Nome", email="seu@email.com" },
]
description = "Um projeto para coletar, analisar e visualizar dados do transporte público de São Paulo."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/seu_usuario/projeto_sptrans"
"Bug Tracker" = "https://github.com/seu_usuario/projeto_sptrans/issues"
